@startuml

title __RESPOSTA's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.resposta {
        class com.soundlab.dockerizedjavaapi.core.domain.resposta.Resposta {
            ~ respostasCriterios : List<RespostaCriterio>
            - candidatoId : Long
            - curriculoUrl : String
            - id : Long
            - textContent : String
            - vagaId : Long
            + Resposta()
            + equals()
            + getCandidatoId()
            + getCurriculoUrl()
            + getId()
            + getRespostasCriterios()
            + getTextContent()
            + getVagaId()
            + hashCode()
            + setCandidatoId()
            + setCurriculoUrl()
            + setId()
            + setRespostasCriterios()
            + setTextContent()
            + setVagaId()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.resposta {
        class com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio {
            - criterioId : Long
            - dateCreated : LocalDateTime
            - dateModified : LocalDateTime
            - id : Long
            - respostaId : Long
            + RespostaCriterio()
            + equals()
            + getCriterio()
            + getCriterioId()
            + getDateCreated()
            + getDateModified()
            + getId()
            + getLevel()
            + getRespostaId()
            + hashCode()
            + setCriterio()
            + setCriterioId()
            + setDateCreated()
            + setDateModified()
            + setId()
            + setLevel()
            + setRespostaId()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.core.domain.resposta.Resposta -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio o-- com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio : vagaCriterio
  com.soundlab.dockerizedjavaapi.core.domain.resposta.RespostaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : level


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
